2001-03-29  Larry Jones  <larry.jones@sdrc.com>

	* main.c (cmds[], lookup_command_attribute, main): Include the
	command attributes in the global command table instead of inferring
	them from the command names.  Change the sense of the
	CVS_CMD_IGNORE_ADMROOT attribute to match its name.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh (*, basic2-64): Remove references to TMPPWD.  Fix FIXME
	at end of script now that $TESTDIR can't be relative.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh: Normalize TESTDIR even when the user set it.

2001-03-29  Larry Jones  <larry.jones@sdrc.com>

	* client.c (connect_to_pserver, start_tcp_server): Add IP address
	to connect failed message.
	(connect_to_forked_server, connect_to_pserver, start_tcp_server): Add
	trace messages ala start_rsh_server.
	(start_rsh_server): Include entire command in trace message for
	START_RSH_WITH_POPEN_RW like ! START_RSH_WITH_POPEN_RW does.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh: Global search & replace ${TESTDIR}/cvsroot with
	${CVSROOT_DIRNAME} for consistency.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh (conflicts-12[68].5): Remove sanity hack which has allowed
	for a CVS bug since May 96/97.  Not sure when the bug went bye-bye, but
	the tests broke when $TESTDIR != $TMPPWD.

2001-03-26  Larry Jones  <larry.jones@sdrc.com>

	* classify.c (Classify_File): Don't report a conflict for a removed
	file when piping.  Also simplify the code structure.
	(Reported by Milos Kleint <milos.kleint@netbeans.com>.)
	* sanity.sh (rmadd2-14[abc]): New tests for above.

2001-03-24  Noel Cragg  <noel@shave.cnet.com>

	* diff.c: mods to allow `-T' and `-y' options to be passed through
	to the diff library.  This wasn't allowed earlier because of a
	similarly named options that got passed through to the old rcs
	programs.  We've long since stopped sending `-T' to any rcs
	utility and have never used `-y'.  Any users of moldly CVS